syntax = "proto2";

package pb;

// ========== Settings ==========

// The top-level settings proto included in GameSettings.
// Immutable over the duration of a single game.

message YearSettings {
  optional int32 init_year = 1 [default=1948];
}

// ========== State ==========

// The top-level state proto included in GameState.
// Mutated each turn based on moves.

message YearState {
  optional int32 year = 1;
}
